# Search-Engine-GenAI-app

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
